--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <!-- DASHBOARD -->
     <section id="dashboard" class="space-y-8 animate-fade-in">
         <div class="text-center mb-10">
-            <h1 class="text-3xl md:text-4xl font-bold text-stone-900 mb-2">Dual-Track 합격 전략 대시보드</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-stone-900 mb-2">Henry의 Dual-Track 합격 전략 대시보드</h1>
             <p class="text-stone-600 max-w-2xl mx-auto">
                 조지아텍 OMSA(1순위) 및 OMSCS(보험용) 2027년 가을학기 동시 합격을 위한 종합 마스터플랜입니다.
-                현재 직무 경험과 부족한 수학적 기초를 전략적으로 보완하여 합격률을 극대화합니다.
+                상세계획도 하는 중!
             </p>
             <div class="mt-6 inline-flex items-center bg-blue-50 px-4 py-2 rounded-full text-blue-800 text-sm font-semibold border border-blue-200">
                 <i class="far fa-clock mr-2"></i> D-Day (2027.02.01): <span id="countdown" class="ml-1">계산 중...</span>일 남음
@@ -141,7 +141,7 @@
     <!-- PREREQUISITES -->
     <section id="prereqs" class="hidden space-y-8 animate-fade-in">
         <div class="mb-8">
-            <h2 class="text-2xl font-bold text-stone-900">선수과목 이수 전략 (4-Tier System)</h2>
+            <h2 class="text-2xl font-bold text-stone-900">선수과목 이수 전략 (3-Tier System)</h2>
             <p class="text-stone-600 mt-2">
                 수학적 약점을 방어하고, OMSA와 OMSCS의 요구사항을 동시에 충족하기 위한 교집합 과목 설계입니다.
                 <br><span class="text-sm text-blue-600 font-medium">* 클릭하여 각 과목의 수강 목적을 확인하세요.</span>
